--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a:hover {
     text-decoration: underline;
 }
 
-div {
+article {
     background-color: white;
     margin: auto auto 15px auto;
     width: 400px;
